err/kss.base.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/kss'...
Listing './lib/python3.5/site-packages/kss/base'...
Listing './lib/python3.5/site-packages/kss/base/compression'...
Listing './lib/python3.5/site-packages/kss/base/compression/thirdparty'...
Listing './lib/python3.5/site-packages/kss/base/kukit'...
Listing './lib/python3.5/site-packages/kss/base/kukit/3rd_party'...
Listing './lib/python3.5/site-packages/kss/base/kukit/3rd_party/firebuglite'...
Listing './lib/python3.5/site-packages/kss/base/kukit/3rd_party/johnnydebris.net'...
Listing './lib/python3.5/site-packages/kss/base/kukit/3rd_party/johnnydebris.net/dommer'...
Listing './lib/python3.5/site-packages/kss/base/kukit/3rd_party/johnnydebris.net/jsbase'...
Compiling './lib/python3.5/site-packages/kss/base/kukit/3rd_party/johnnydebris.net/jsbase/conftest.py'...
***   File "./lib/python3.5/site-packages/kss/base/kukit/3rd_party/johnnydebris.net/jsbase/conftest.py", line 63
    print line[9:]
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kss/base/kukit/3rd_party/johnnydebris.net/jsbase/testing'...
Listing './lib/python3.5/site-packages/kss/base/kukit/3rd_party/johnnydebris.net/minisax.js'...
Listing './lib/python3.5/site-packages/kss/base/kukit/doc'...
Listing './lib/python3.5/site-packages/kss/base/kukit/kukit'...
Listing './lib/python3.5/site-packages/kss/base/kukit/tests'...
Listing './lib/python3.5/site-packages/kss/base/kukit/utils'...
Compiling './lib/python3.5/site-packages/kss/base/utils.py'...
***   File "./lib/python3.5/site-packages/kss/base/utils.py", line 125
    print "Activated plugins :"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kss.base-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
